--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "isomorphic-fetch": "^2.2.1",
-    "safe-errors": "0.5.0"
+    "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
