--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./src/**/*.spec.js",
-    "build": "babel ./src --out-dir ./lib",
+    "build": "babel ./src --out-dir ./lib --presets=es2015",
     "precommit": "npm run lint; npm run build; npm run test; git add ./lib",
     "lint": "standard './src/**/*.js'"
   },
