--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "isomorphic-fetch": "^2.2.1"
+    "fetch-everywhere": "^1.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
