--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-protocol-http",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fetch-everywhere": "^1.0.5"
+    "fetch-everywhere": "^1.0.5",
+    "lodash": "^4.17.4",
+    "simple-protocol-helpers": "^0.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
